--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,7 +16,7 @@
     android:text="My Nanodegree Apps!"
     android:textAlignment="center"
     android:padding="10dp"
-    android:textColor="#FF4081"
+    android:textColor="@color/colorAccent"
     android:layout_marginBottom="10dp"
     android:textSize="25dp"
     android:theme="@style/AppTheme"/>
